--- a/src/main/webapp/WEB-INF/views/book.html
+++ b/src/main/webapp/WEB-INF/views/book.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-	<meta charset="UTF-8">
-	<title>Book a room</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="../dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../dist/js/datepicker.js"></script>
-    <style>
-    	.row{
-    		margin: 0 0;
-    	}
-    </style>
+<head th:include="fragments/head :: headFragment">
+	<title id="pageTitle">Бронирование</title>
+	<style>
+		.row {
+			margin: 0 0;
+		}
+	</style>
 </head>
 <body>
 	<div class="wrapper">
 		<main class="content course">
-		
+
 			<header th:insert="fragments/sideNavbar :: navbar (page='book')"></header>
 
 			<div class="mobileMenu d-block d-lg-none">
 				<div class="mobileButtonDiv" style="display: flex;">
 					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0 ;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
 						<g>
 							<g>
-								<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+								<path
+								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
@@ -52,66 +46,99 @@
 						</g>
 						</svg>
 					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="../index.html"><img src="../img/knd.png" alt="logo"></a></div>
+					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
+						<a href="../index.html">
+							<img src="../img/knd.png" alt="logo">
+						</a>
+					</div>
 				</div>
-				
+
 				<div id="mobileMenuDown" style="display: none;">
 					<ul>
-                        <li><div class="mobile m-rooms"><a href="/rooms">Номера</a></div></li>
-                        <li><div class="mobile m-setings"><a href="/services">Подробнее</a></div></li>
-                        <li><div class="mobile m-photos"><a href="/photos">Фотографии</a></div></li>
-                        <li><div class="mobile m-location"><a href="/location">Расположение</a></div></li>
-                        <li><div class="mobile m-booking"><a href="/book">Забронировать</a></div></li>
+						<li>
+							<div class="mobile m-rooms">
+								<a href="/rooms">Номера</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-setings">
+								<a href="/services">Подробнее</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-photos">
+								<a href="/photos">Фотографии</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-location">
+								<a href="/location">Расположение</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-booking">
+								<a href="/book">Забронировать</a>
+							</div>
+						</li>
 					</ul>
 					<div class="m-social">
-						<a href="https://vk.com/pragmatic_person" id="vk"><i class="fa fa-vk"></i></a><br>
-						<a href="" id="inst"><i class="fa fa-instagram"></i></a>
+						<a href="https://vk.com/pragmatic_person" id="vk">
+							<i class="fa fa-vk"></i>
+						</a>
+						<br>
+						<a href="" id="inst">
+							<i class="fa fa-instagram"></i>
+						</a>
 					</div>
 				</div>
 			</div>
-		
 
-		<div id="main_content">
-			<div class="bg-image-container">
-				<div class="booking-window">
-					<div class="form">
-						<form id="mainForm" name="mainForm" th:object="${order}" action="#" th:action="@{/book}" method="POST">
-							<div id="formOne">
-								<div class="title">
-									<h1 class="header-text"><img src="../img/star.png" alt="star" style="margin: 10px; vertical-align: top; ">Key And Door Hotel<img src="../img/star.png" alt="star" style="margin: 10px; vertical-align: top; "></h1>
-								</div>
-								<div class="row bg-warning" th:if="${error != null}">
-			                        <span th:text="${error}"></span>
-								</div>
-								<div class="row">
-									<div class="manage-div col-6" >
-										<p>Дата заселения-выселения*:</p>
-										<input th:field="*{dates}" type='text' class="datepicker-here name-input" id="date" autocomplete="off" required="required" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}-(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="ДД.ММ.ГГГГ-ДД.ММ.ГГГГ"> 
+
+			<div id="main_content">
+				<div class="bg-image-container">
+					<div class="booking-window">
+						<div class="form">
+							<form id="mainForm" name="mainForm" th:object="${order}" action="#" th:action="@{/book}" method="POST">
+								<div id="formOne">
+									<div class="title">
+										<h1 class="header-text">
+											<img src="../img/star.png" alt="star" style="margin: 10px; vertical-align: top;">
+											Key And Door Hotel
+											<img src="../img/star.png" alt="star" style="margin: 10px; vertical-align: top;">
+										</h1>
 									</div>
-									<div class="manage-div col-6">
-										<div class="d-inline-block w-100">
-											<p>Количество посетителей:</p>
-                                            <input th:field="*{peopleCount}" type="number" class="w-100" id="peopleCount"  placeholder="Введите количество человек" required="required" pattern="[1-8]" />
+									<div class="row bg-warning" th:if="${error != null}">
+										<span th:text="${error}"></span>
+									</div>
+									<div class="row">
+										<div class="manage-div col-6">
+											<p>Дата заселения-выселения*:</p>
+											<input th:field="*{dates}" type='text' class="datepicker-here name-input" id="date" autocomplete="off" required="required"
+												pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}-(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="ДД.ММ.ГГГГ-ДД.ММ.ГГГГ">
+										</div>
+										<div class="manage-div col-6">
+											<div class="d-inline-block w-100">
+												<p>Количество посетителей:</p>
+												<input th:field="*{peopleCount}" type="number" class="w-100" id="peopleCount" placeholder="Введите количество человек" required="required" pattern="[1-8]" />
+											</div>
 										</div>
 									</div>
-								</div>
-								<div class="row">
-									<div class="manage-div col-12 col-md-6">
-										<button type="button" id="stage1" disabled="disabled">Найти номера</button> 
+									<div class="row">
+										<div class="manage-div col-12 col-md-6">
+											<button type="button" id="stage1" disabled="disabled">Найти номера</button>
+										</div>
+									</div>
+									<div class="notice">
+										<p>*максимальное время проживания - 21 день</p>
 									</div>
 								</div>
-								<div class="notice">
-									<p>*максимальное время проживания - 21 день</p>
-								</div>
-							</div>
-							
-							<div id="formTwo">
-							</div>
-						</form>
+
+								<div id="formTwo"></div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 		</main>
 	</div>
 
