--- a/src/main/webapp/WEB-INF/views/error.html
+++ b/src/main/webapp/WEB-INF/views/error.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Key'n'Door Hotel - Главная страница</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head th:include="fragments/head :: headFragment">
+	<title id="pageTitle">Error page</title>
 </head>
 <body>
 	<div class="wrapper">
