--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Key'n'Door Hotel - Главная страница</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+
+<head th:include="fragments/head :: headFragment">
+	<title id="pageTitle">Key'n'Door Hotel - Главная страница</title>
 </head>
 <body>
 	<div class="wrapper">
 		<main class="content course">
-		     
-		     <header th:insert="fragments/sideNavbar :: navbar (page='home')"></header>
-		     
+
+			<header th:insert="fragments/sideNavbar :: navbar (page='home')"></header>
+
 			<div class="mobileMenu d-block d-lg-none">
 				<div class="mobileButtonDiv" style="display: flex;">
 					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0 ;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
 						<g>
 							<g>
-								<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+								<path
+								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
@@ -44,20 +42,49 @@
 						</g>
 						</svg>
 					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="index.html"><img src="img/knd.png" alt="logo"></a></div>
+					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
+						<a href="index.html">
+							<img src="img/knd.png" alt="logo">
+						</a>
+					</div>
 				</div>
-				
+
 				<div id="mobileMenuDown" style="display: none;">
 					<ul>
-                        <li><div class="mobile m-rooms"><a href="/rooms">Номера</a></div></li>
-                        <li><div class="mobile m-setings"><a href="/services">Подробнее</a></div></li>
-                        <li><div class="mobile m-photos"><a href="/photos">Фотографии</a></div></li>
-                        <li><div class="mobile m-location"><a href="/location">Расположение</a></div></li>
-                        <li><div class="mobile m-booking"><a href="/book">Забронировать</a></div></li>
+						<li>
+							<div class="mobile m-rooms">
+								<a href="/rooms">Номера</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-setings">
+								<a href="/services">Подробнее</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-photos">
+								<a href="/photos">Фотографии</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-location">
+								<a href="/location">Расположение</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-booking">
+								<a href="/book">Забронировать</a>
+							</div>
+						</li>
 					</ul>
 					<div class="m-social">
-						<a href="https://vk.com/pragmatic_person" id="vk"><i class="fa fa-vk"></i></a><br>
-						<a href="" id="inst"><i class="fa fa-instagram"></i></a>
+						<a href="https://vk.com/pragmatic_person" id="vk">
+							<i class="fa fa-vk"></i>
+						</a>
+						<br>
+						<a href="" id="inst">
+							<i class="fa fa-instagram"></i>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -69,35 +96,44 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="about_hotel">
 					<div id="container-fluid">
 						<table>
-								<tr>
-									<td class="side-border-bottom"></td>
-									<td id="middle-border">
-										<div class="container-border">
-											<div class="border-wrapper"></div>
-											<div class="container text-about">
-												<p>
-												Отель расположен в самом центре города - район Нормальм. Нормальм - городской округ Стокгольма и центр водного общественного транпорта. Здесь находятся главные торговые центры и универмаги. Отдальнность от музеев Стокгольма нивелируется потрясающим общественным транспортом.
-												<br><br>
+							<tr>
+								<td class="side-border-bottom"></td>
+								<td id="middle-border">
+									<div class="container-border">
+										<div class="border-wrapper"></div>
+										<div class="container text-about">
+											<p>
+												Отель расположен в самом центре города - район Нормальм. Нормальм - городской округ Стокгольма и центр водного общественного транпорта. Здесь находятся
+												главные торговые центры и универмаги. Отдальнность от музеев Стокгольма нивелируется потрясающим общественным транспортом.
+												<br>
+												<br>
 
-												Key and Door Hotel владеет 38 комнатами и готов принять путешественников со всего мира. Если вы путешествуете со своей семьей, школой, компанией, вы можете забронировать более 7 комнат со скидкой 10%. 
-												</p>
-											</div>
+												Key and Door Hotel владеет 38 комнатами и готов принять путешественников со всего мира. Если вы путешествуете со своей семьей, школой, компанией, вы можете
+												забронировать более 7 комнат со скидкой 10%.
+											</p>
 										</div>
-									</td>
-									<td class="side-border-bottom"></td>
-									
-								</tr>
+									</div>
+								</td>
+								<td class="side-border-bottom"></td>
+
+							</tr>
 						</table>
 					</div>
 					<div class="three_pictures container-fluid">
 						<div class="image-container">
-							<div class="block-pictures"><img src="/img/bedroom.jpg" alt="bedroom"></div>
-							<div class="block-pictures block-pictures-middle"><img src="/img/breakfast.jpg" alt="breakfast"></div>
-							<div class="block-pictures"><img src="/img/holl.jpg" alt="holl"></div>
+							<div class="block-pictures">
+								<img src="/img/bedroom.jpg" alt="bedroom">
+							</div>
+							<div class="block-pictures block-pictures-middle">
+								<img src="/img/breakfast.jpg" alt="breakfast">
+							</div>
+							<div class="block-pictures">
+								<img src="/img/holl.jpg" alt="holl">
+							</div>
 						</div>
 					</div>
 					<div id="container-fluid">
@@ -112,7 +148,8 @@
 												Комнаты выполнены в классическом для Скандинавских стран строгом стиле.
 												<br>
 												<br>
-												Начните утро с аппетитного завтрака, который вы заказали вчера вечером. В меню вы сможете найти яичницу с беконом, блины с вареньем, овсяную кашу, овощи и фрукты.
+												Начните утро с аппетитного завтрака, который вы заказали вчера вечером. В меню вы сможете найти яичницу с беконом, блины с вареньем, овсяную кашу, овощи и
+												фрукты.
 											</p>
 										</div>
 									</div>
@@ -128,41 +165,46 @@
 							</div>
 							<div class="container-inform">
 								<div class="row">
-								<div class="breakfast three_blocks col-lg-3 col-md-6 col-12">
+									<div class="breakfast three_blocks col-lg-3 col-md-6 col-12">
 										<h3>Завтрак</h3>
-										<p>Завтрак включен в цену каждого номера. <br>
-										Подается:
-										<ul>
-											<li>Понедельник - Пятница:  7:30 - 10:00</li>
-											<li>Суббота - Воскресенье:  8:00 - 11:00</li>
-										</ul>
+										<p>
+											Завтрак включен в цену каждого номера.
+											<br>
+											Подается:
 										</p>
-								</div>
-								<div class="chek-in three_blocks col-lg-3 col-md-6 col-12">	
+										<ul>
+											<li>Понедельник - Пятница: 7:30 - 10:00</li>
+											<li>Суббота - Воскресенье: 8:00 - 11:00</li>
+										</ul>
+									</div>
+									<div class="chek-in three_blocks col-lg-3 col-md-6 col-12">
 										<h3>Заселение/Выселение</h3>
-										<p>Заселение начинается каждый день в 15:00. <br>
-										*При себе обязательно иметь паспорт* <br>
-										*Заселение с животными запрещено*</p>
+										<p>
+											Заселение начинается каждый день в 15:00.
+											<br>
+											*При себе обязательно иметь паспорт*
+											<br>
+											*Заселение с животными запрещено*
+										</p>
 										<p>Выселение не позднее 12:00</p>
-								</div>	
-								<div class="parking three_blocks col-lg-3 col-md-6 col-12">
+									</div>
+									<div class="parking three_blocks col-lg-3 col-md-6 col-12">
 										<h3>Парковка</h3>
 										<p>У нас имеется 13 парковочных мест, которые вы можете арендовать за 2.200 руб. в день.</p>
-								</div>
-								<div class="security three_blocks col-lg-3 col-md-6 col-12">
+									</div>
+									<div class="security three_blocks col-lg-3 col-md-6 col-12">
 										<h3>Безопасность</h3>
 										<p>Ваша безопасность очень важна для нас, поэтому в каждом номере мы установили датчики дыма а также кнопку тревоги</p>
-								</div></div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 
 				</div>
-			    <div th:insert="fragments/footer :: footer">
-                    
-                </div>
+				<div th:insert="fragments/footer :: footer"></div>
 			</div>
-			
+
 		</main>
 	</div>
 
