--- a/src/main/webapp/WEB-INF/views/location.html
+++ b/src/main/webapp/WEB-INF/views/location.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Расположение</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/style.css">	
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=056f5243-0d5c-4996-a7be-0d2ffd462989" type="text/javascript"></script>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<head th:include="fragments/head :: headFragment">
+	<title id="pageTitle">Местонахождение</title>
 	<style>
-		.row{
+		.row {
 			margin-bottom: 25px;
 		}
 	</style>
 </head>
 <body>
+	<script id="yandexMap" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=056f5243-0d5c-4996-a7be-0d2ffd462989" type="text/javascript"></script>
 	<div class="wrapper">
 		<main class="content">
-		
+
 			<header th:insert="fragments/sideNavbar :: navbar (page='location')"></header>
-			
+
 			<div class="mobileMenu d-block d-lg-none">
 				<div class="mobileButtonDiv" style="display: flex;">
 					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0 ;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
 						<g>
 							<g>
-								<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+								<path
+								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
@@ -51,38 +47,73 @@
 						</g>
 						</svg>
 					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="../index.html"><img src="../img/knd.png" alt="logo"></a></div>
+					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
+						<a href="../index.html">
+							<img src="../img/knd.png" alt="logo">
+						</a>
+					</div>
 				</div>
-				
+
 				<div id="mobileMenuDown" style="display: none;">
 					<ul>
-                        <li><div class="mobile m-rooms"><a href="/rooms">Номера</a></div></li>
-                        <li><div class="mobile m-setings"><a href="/services">Подробнее</a></div></li>
-                        <li><div class="mobile m-photos"><a href="/photos">Фотографии</a></div></li>
-                        <li><div class="mobile m-location"><a href="/location">Расположение</a></div></li>
-                        <li><div class="mobile m-booking"><a href="/book">Забронировать</a></div></li>
+						<li>
+							<div class="mobile m-rooms">
+								<a href="/rooms">Номера</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-setings">
+								<a href="/services">Подробнее</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-photos">
+								<a href="/photos">Фотографии</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-location">
+								<a href="/location">Расположение</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-booking">
+								<a href="/book">Забронировать</a>
+							</div>
+						</li>
 					</ul>
 					<div class="m-social">
-						<a href="https://vk.com/pragmatic_person" id="vk"><i class="fa fa-vk"></i></a><br>
-						<a href="" id="inst"><i class="fa fa-instagram"></i></a>
+						<a href="https://vk.com/pragmatic_person" id="vk">
+							<i class="fa fa-vk"></i>
+						</a>
+						<br>
+						<a href="" id="inst">
+							<i class="fa fa-instagram"></i>
+						</a>
 					</div>
 				</div>
 			</div>
 			<div id="main_content">
 				<div class="container-fluid">
 					<div class="title">
-						<h1>
-							Норрмальм
-						</h1>
+						<h1>Норрмальм</h1>
 					</div>
 					<div class="googlemaps">
 						<div style="position: relative;">
 							<div class="sidemenumap">
 								<p>
-									Район <a id="norm" href="https://en.wikipedia.org/wiki/Norrmalm"><u>Норрмальм</u></a> в Стокгольме – это географический и деловой центр шведской столицы. Он является отличным местом для прогулок по паркам, магазинам и знакомства с лучшими историческими и современными достопримечательностями города. Этот квартал поражает своей невероятной архитектурой, сочетающей в себе черты прообразов старинных построек и высоких небоскребов. Последняя его значимая перестройка проводилась после Второй мировой войны, именно тогда на волне стремления к модернизации были снесены многие старые здания и возведены новые, более современные сооружения.</p>
+									Район
+									<a id="norm" href="https://en.wikipedia.org/wiki/Norrmalm">
+										<u>Норрмальм</u>
+									</a>
+									в Стокгольме – это географический и деловой центр шведской столицы. Он является отличным местом для прогулок по паркам, магазинам и знакомства с лучшими
+									историческими и современными достопримечательностями города. Этот квартал поражает своей невероятной архитектурой, сочетающей в себе черты прообразов старинных
+									построек и высоких небоскребов. Последняя его значимая перестройка проводилась после Второй мировой войны, именно тогда на волне стремления к модернизации были
+									снесены многие старые здания и возведены новые, более современные сооружения.
+								</p>
 							</div>
 							<div id="map"></div>
-							
+
 						</div>
 					</div>
 					<div class="title">
@@ -94,18 +125,28 @@
 								<div class="title">
 									<h3>Старый город</h3>
 								</div>
-								<p>Старый город, до 1980 года официально назывался <b>Город между мостами</b> - исторический центр Стокгольма, находящийся на острове Стадсхолмен. Эта часть города построена в XIII в., поэтому здесь много узких мощёных улочек и переулков, а так же старой архитектуры.</p>
+								<p>
+									Старый город, до 1980 года официально назывался
+									<b>Город между мостами</b>
+									- исторический центр Стокгольма, находящийся на острове Стадсхолмен. Эта часть города построена в XIII в., поэтому здесь много узких мощёных улочек и переулков,
+									а так же старой архитектуры.
+								</p>
 							</div>
-							<div class="col-12 col-lg-6"><img src="../img/old-town.jpg" class="slider__item" alt="old-town"></div>
+							<div class="col-12 col-lg-6">
+								<img src="../img/old-town.jpg" class="slider__item" alt="old-town">
+							</div>
 						</div>
 						<div class="row align-items-center">
-							<div class="col-12 col-lg-6 order-lg-1 order-12"><img src="../img/Klara-Church.jpg" class="slider__item" alt="Klara-Church"></div>
+							<div class="col-12 col-lg-6 order-lg-1 order-12">
+								<img src="../img/Klara-Church.jpg" class="slider__item" alt="Klara-Church">
+							</div>
 							<div class="col-12 col-lg-6 order-lg-12 order-1">
-								
+
 								<div class="title">
 									<h3>Церковь Святой Клары</h3>
 								</div>
-								<p>Церковь была разрушена, отстроена вновь, пережила серьезный пожар и реконструкцию города. Сейчас она окружена современными зданиями. Поистине уголок истории в современном городе</p>
+								<p>Церковь была разрушена, отстроена вновь, пережила серьезный пожар и реконструкцию города. Сейчас она окружена современными зданиями. Поистине уголок
+									истории в современном городе</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
@@ -113,15 +154,16 @@
 								<div class="title">
 									<h3>Скиннарвиксбергет</h3>
 								</div>
-								<p>Самая высокая природная точка в центре Стокгольма - любимое место местных жителей и отличное место для пикников. От сюда открывается прекрасный вид на Стокгольмскую ратушу, Старый Город и другие достопримечательности. </p>
+								<p>Самая высокая природная точка в центре Стокгольма - любимое место местных жителей и отличное место для пикников. От сюда открывается прекрасный вид на
+									Стокгольмскую ратушу, Старый Город и другие достопримечательности.</p>
 							</div>
-							<div class="col-12 col-lg-6"><img src="../img/skin.jpg" class="slider__item" alt="skin"></div>
+							<div class="col-12 col-lg-6">
+								<img src="../img/skin.jpg" class="slider__item" alt="skin">
+							</div>
 						</div>
 					</div>
 				</div>
-				<div th:insert="fragments/footer :: footer">
-                    
-                </div>
+				<div th:insert="fragments/footer :: footer"></div>
 			</div>
 		</main>
 	</div>
@@ -129,22 +171,23 @@
 
 
 	<script>
-		ymaps.ready(function () {
-   		 var myMap = new ymaps.Map('map', {
-            center: [59.337315, 18.049843],
-            zoom: 15,
-            controls: ['fullscreenControl']
-        }, {
-            searchControlProvider: 'yandex#search'
-        });
-   		 myMap.geoObjects.add(new ymaps.Placemark([59.337655, 18.051646],{
-            iconImageSize: [30, 42],
-            iconImageOffset: [-5, -38]
-        }))
+		ymaps.ready(function() {
+			var myMap = new ymaps.Map('map', {
+				center : [ 59.337315, 18.049843 ],
+				zoom : 15,
+				controls : [ 'fullscreenControl' ]
+			}, {
+				searchControlProvider : 'yandex#search'
+			});
+			myMap.geoObjects.add(new ymaps.Placemark([ 59.337655, 18.051646 ],
+					{
+						iconImageSize : [ 30, 42 ],
+						iconImageOffset : [ -5, -38 ]
+					}))
 		});
 	</script>
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-	<script src="../js/bootstrap.min.js" ></script>
-	<script src="../js/script.js" ></script>
+	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/script.js"></script>
 </body>
 </html>
