--- a/src/main/webapp/WEB-INF/views/rooms.html
+++ b/src/main/webapp/WEB-INF/views/rooms.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Комнаты</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<head th:include="fragments/head :: headFragment">
+	<title id="pageTitle">Комнаты</title>
 </head>
 <body>
 	<div class="wrapper">
 		<main class="content course">
-		
+
 			<header th:insert="fragments/sideNavbar :: navbar (page='rooms')"></header>
-			
+
 			<div class="mobileMenu d-block d-lg-none">
 				<div class="mobileButtonDiv" style="display: flex;">
 					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0 ;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
 						<g>
 							<g>
-								<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+								<path
+								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
@@ -44,34 +41,61 @@
 						</g>
 						</svg>
 					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="../index.html"><img src="../img/knd.png" alt="logo"></a></div>
+					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
+						<a href="../index.html">
+							<img src="../img/knd.png" alt="logo">
+						</a>
+					</div>
 				</div>
-				
+
 				<div id="mobileMenuDown" style="display: none;">
 					<ul>
-						<li><div class="mobile m-rooms"><a href="/rooms">Номера</a></div></li>
-						<li><div class="mobile m-setings"><a href="/services">Подробнее</a></div></li>
-						<li><div class="mobile m-photos"><a href="/photos">Фотографии</a></div></li>
-						<li><div class="mobile m-location"><a href="/location">Расположение</a></div></li>
-						<li><div class="mobile m-booking"><a href="/book">Забронировать</a></div></li>
+						<li>
+							<div class="mobile m-rooms">
+								<a href="/rooms">Номера</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-setings">
+								<a href="/services">Подробнее</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-photos">
+								<a href="/photos">Фотографии</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-location">
+								<a href="/location">Расположение</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-booking">
+								<a href="/book">Забронировать</a>
+							</div>
+						</li>
 					</ul>
 					<div class="m-social">
-						<a href="https://vk.com/pragmatic_person" id="vk"><i class="fa fa-vk"></i></a><br>
-						<a href="" id="inst"><i class="fa fa-instagram"></i></a>
+						<a href="https://vk.com/pragmatic_person" id="vk">
+							<i class="fa fa-vk"></i>
+						</a>
+						<br>
+						<a href="" id="inst">
+							<i class="fa fa-instagram"></i>
+						</a>
 					</div>
 				</div>
 			</div>
 			<div id="main_content">
-				<div class="slide-bg-2">
-					
-				</div>
+				<div class="slide-bg-2"></div>
 				<div class="container-fluid">
 					<div class="row">
 						<div class="aboutHotelText col-12">
 							<div class="container">
-								<p>
-									Отель включает в себя 38 недавно отремонтированных и со вкусом обставленных номеров. Это светлые и оборудованные всем необходимым помещения. Приятные оттенки: бордовый, светло-серый или сдержанный темно-серый – и элегантные материалы, присутствующие в интерьере, не оставят вас равнодушными. А простор номера и мягкое постельное белье удовлетворят все ваши требования к комфорту. 
-								</p>
+								<p>Отель включает в себя 38 недавно отремонтированных и со вкусом обставленных номеров. Это светлые и оборудованные всем необходимым помещения. Приятные
+									оттенки: бордовый, светло-серый или сдержанный темно-серый – и элегантные материалы, присутствующие в интерьере, не оставят вас равнодушными. А простор номера и
+									мягкое постельное белье удовлетворят все ваши требования к комфорту.</p>
 							</div>
 						</div>
 					</div>
@@ -79,50 +103,58 @@
 						<div class="col-12 col-lg-6">
 							<div class="description">
 								<h2>Одноместный номер</h2>
-								<p>Наши одноместные номера площадью 11 м<sup>2</sup> включают постельное белье, пуховое одеяло, удобные подушки, шкаф, стол. В них есть все необходимые удобства: Wi-Fi, телевизор с плоским экраном и спутниковыми каналами и т. д.
-								Общий санузел на несколько комнат.</p>
+								<p>
+									Наши одноместные номера площадью 11 м
+									<sup>2</sup>
+									включают постельное белье, пуховое одеяло, удобные подушки, шкаф, стол. В них есть все необходимые удобства: Wi-Fi, телевизор с плоским экраном и спутниковыми
+									каналами и т. д. Общий санузел на несколько комнат.
+								</p>
 								<a class="aboutRoom" href="/rooms/single">ПОДРОБНЕЕ</a>
 							</div>
 						</div>
-						<div class="col-12 col-lg-6" >
+						<div class="col-12 col-lg-6">
 							<div class="slider SliderOne">
-							  <div class="slider__wrapper">
-							    <div class="slider__item">
-							      <img src="../img/rooms/single/1.png" class="d-block w-100" alt="single room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/single/2.png" class="d-block w-100" alt="single room">
-							    </div>
-							  </div>
-							  <a class="slider__control slider__control_left" href="#" role="button"></a>
-   							  <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+								<div class="slider__wrapper">
+									<div class="slider__item">
+										<img src="../img/rooms/single/1.png" class="d-block w-100" alt="single room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/single/2.png" class="d-block w-100" alt="single room">
+									</div>
+								</div>
+								<a class="slider__control slider__control_left" href="#" role="button"></a>
+								<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 							</div>
-						
+
 						</div>
 					</div>
 					<div class="row m-1 py-3">
-						<div class="col-12 col-lg-6 order-12 order-lg-1" >
+						<div class="col-12 col-lg-6 order-12 order-lg-1">
 							<div class="slider SliderTwo">
-							  <div class="slider__wrapper">
-							    <div class="slider__item">
-							      <img src="../img/rooms/double/1.png" class="d-block w-100" alt="double room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/double/2.png" class="d-block w-100" alt="double room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/double/3.png" class="d-block w-100" alt="double room">
-							    </div>
-							  </div>
-							  <a class="slider__control slider__control_left" href="#" role="button"></a>
-   							  <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+								<div class="slider__wrapper">
+									<div class="slider__item">
+										<img src="../img/rooms/double/1.png" class="d-block w-100" alt="double room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/double/2.png" class="d-block w-100" alt="double room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/double/3.png" class="d-block w-100" alt="double room">
+									</div>
+								</div>
+								<a class="slider__control slider__control_left" href="#" role="button"></a>
+								<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 							</div>
-						
+
 						</div>
 						<div class="col-12 col-lg-6 order-1 order-lg-12">
 							<div class="description">
 								<h2>Двухместный номер</h2>
-								<p>Наши двухместные номера площадью 22 м<sup>2</sup> включают двуспальную кровать с пуховым одеялом и удобными подушками, шкаф, обеденный стол, холодильник, шкаф, телевизор, Wi-Fi.</p>
+								<p>
+									Наши двухместные номера площадью 22 м
+									<sup>2</sup>
+									включают двуспальную кровать с пуховым одеялом и удобными подушками, шкаф, обеденный стол, холодильник, шкаф, телевизор, Wi-Fi.
+								</p>
 								<a class="aboutRoom" href="/rooms/double">ПОДРОБНЕЕ</a>
 							</div>
 						</div>
@@ -131,69 +163,75 @@
 						<div class="col-12 col-lg-6">
 							<div class="description">
 								<h2>Двухместный номер с двухэтажной кроватью</h2>
-								<p>Наши двухместные номера площадью 22 м<sup>2</sup> включают двуспальную кровать с пуховым одеялом и удобными подушками, шкаф, обеденный стол, холодильник, шкаф, телевизор, Wi-Fi.</p>
+								<p>
+									Наши двухместные номера площадью 22 м
+									<sup>2</sup>
+									включают двуспальную кровать с пуховым одеялом и удобными подушками, шкаф, обеденный стол, холодильник, шкаф, телевизор, Wi-Fi.
+								</p>
 								<a class="aboutRoom" href="/rooms/double-eco">ПОДРОБНЕЕ</a>
 							</div>
 						</div>
-						<div class="col-12 col-lg-6" >
+						<div class="col-12 col-lg-6">
 							<div class="slider SliderFour">
-							  <div class="slider__wrapper">
-							    <div class="slider__item">
-							      <img src="../img/rooms/double-eco/1.png" class="d-block w-100" alt="double-eco room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/double-eco/2.png" class="d-block w-100" alt="double-eco room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/double-eco/3.png" class="d-block w-100" alt="double-eco room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/double-eco/4.png" class="d-block w-100" alt="double-eco room">
-							    </div>
-							  </div>
-							  <a class="slider__control slider__control_left" href="#" role="button"></a>
-   							  <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+								<div class="slider__wrapper">
+									<div class="slider__item">
+										<img src="../img/rooms/double-eco/1.png" class="d-block w-100" alt="double-eco room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/double-eco/2.png" class="d-block w-100" alt="double-eco room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/double-eco/3.png" class="d-block w-100" alt="double-eco room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/double-eco/4.png" class="d-block w-100" alt="double-eco room">
+									</div>
+								</div>
+								<a class="slider__control slider__control_left" href="#" role="button"></a>
+								<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 							</div>
-						
+
 						</div>
 					</div>
 					<div class="row m-1 py-3">
-						<div class="col-12 col-lg-6 order-12 order-lg-1" >
+						<div class="col-12 col-lg-6 order-12 order-lg-1">
 							<div class="slider SliderTree">
-							  <div class="slider__wrapper">
-							    <div class="slider__item">
-							      <img src="../img/rooms/triple/1.png" class="d-block w-100" alt="triple room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/triple/2.png" class="d-block w-100" alt="triple room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/triple/3.png" class="d-block w-100" alt="triple room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/triple/4.png" class="d-block w-100" alt="triple room">
-							    </div>
-							    <div class="slider__item">
-							      <img src="../img/rooms/triple/5.png" class="d-block w-100" alt="triple room">
-							    </div>
-							  </div>
-							  <a class="slider__control slider__control_left" href="#" role="button"></a>
-   							  <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+								<div class="slider__wrapper">
+									<div class="slider__item">
+										<img src="../img/rooms/triple/1.png" class="d-block w-100" alt="triple room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/triple/2.png" class="d-block w-100" alt="triple room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/triple/3.png" class="d-block w-100" alt="triple room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/triple/4.png" class="d-block w-100" alt="triple room">
+									</div>
+									<div class="slider__item">
+										<img src="../img/rooms/triple/5.png" class="d-block w-100" alt="triple room">
+									</div>
+								</div>
+								<a class="slider__control slider__control_left" href="#" role="button"></a>
+								<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 							</div>
-						
+
 						</div>
 						<div class="col-12 col-lg-6 order-1 order-lg-12">
 							<div class="description">
 								<h2>Трехместный номер</h2>
-								<p>Наши двухместные номера площадью 25 м<sup>2</sup> включают двуспальную кровать, шкаф, обеденный стол, холодильник, шкаф, телевизор, Wi-Fi.</p>
+								<p>
+									Наши двухместные номера площадью 25 м
+									<sup>2</sup>
+									включают двуспальную кровать, шкаф, обеденный стол, холодильник, шкаф, телевизор, Wi-Fi.
+								</p>
 								<a class="aboutRoom" href="/rooms/triple">ПОДРОБНЕЕ</a>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div th:insert="fragments/footer :: footer">
-                    
-                </div>
+				<div th:insert="fragments/footer :: footer"></div>
 			</div>
 
 
