--- a/src/main/webapp/WEB-INF/views/services.html
+++ b/src/main/webapp/WEB-INF/views/services.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Услуги</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<head th:include="fragments/head :: headFragment">
+	<title id="pageTitle">Услуги</title>
 </head>
 <body>
 	<div class="wrapper">
 		<main class="content course">
-		
+
 			<header th:insert="fragments/sideNavbar :: navbar (page='services')"></header>
-			
+
 			<div class="mobileMenu d-block d-lg-none">
 				<div class="mobileButtonDiv" style="display: flex;">
 					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0 ;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
 						<g>
 							<g>
-								<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+								<path
+								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
 							<g>
-								<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+								<path
+								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 							</g>
 						</g>
 						<g>
@@ -45,24 +41,53 @@
 						</g>
 						</svg>
 					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;"><a href="../index.html"><img src="../img/knd.png" alt="logo"></a></div>
+					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
+						<a href="../index.html">
+							<img src="../img/knd.png" alt="logo">
+						</a>
+					</div>
 				</div>
-				
+
 				<div id="mobileMenuDown" style="display: none;">
 					<ul>
-                        <li><div class="mobile m-rooms"><a href="/rooms">Номера</a></div></li>
-                        <li><div class="mobile m-setings"><a href="/services">Подробнее</a></div></li>
-                        <li><div class="mobile m-photos"><a href="/photos">Фотографии</a></div></li>
-                        <li><div class="mobile m-location"><a href="/location">Расположение</a></div></li>
-                        <li><div class="mobile m-booking"><a href="/book">Забронировать</a></div></li>
+						<li>
+							<div class="mobile m-rooms">
+								<a href="/rooms">Номера</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-setings">
+								<a href="/services">Подробнее</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-photos">
+								<a href="/photos">Фотографии</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-location">
+								<a href="/location">Расположение</a>
+							</div>
+						</li>
+						<li>
+							<div class="mobile m-booking">
+								<a href="/book">Забронировать</a>
+							</div>
+						</li>
 					</ul>
 					<div class="m-social">
-						<a href="https://vk.com/pragmatic_person" id="vk"><i class="fa fa-vk"></i></a><br>
-						<a href="" id="inst"><i class="fa fa-instagram"></i></a>
+						<a href="https://vk.com/pragmatic_person" id="vk">
+							<i class="fa fa-vk"></i>
+						</a>
+						<br>
+						<a href="" id="inst">
+							<i class="fa fa-instagram"></i>
+						</a>
 					</div>
 				</div>
 			</div>
-			<div id="main_content"  class="servMain">
+			<div id="main_content" class="servMain">
 				<div class="container-fliud">
 					<div class="title d-flex justify-content-center">
 						<h1>Подробнее</h1>
@@ -75,101 +100,228 @@
 							<div class="col-12 col-md-6 col-lg-4 borderBrown">
 								<table class="servicesTable">
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/24-hour-signal.png" alt="reception"></div></td>
-										<td><div><span>Работа ресепшена 24 часа в сутки. Вы можете позвонить в любое время и заказать чай/кофе в номер либо попросить вызвать спец службы.</span></div>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/24-hour-signal.png" alt="reception">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>Работа ресепшена 24 часа в сутки. Вы можете позвонить в любое время и заказать чай/кофе в номер либо попросить вызвать спец службы.</span>
+											</div>
 										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/atlas-book.png" alt="atlas-book"></div></td>
-										<td><div><span>У нас имеется специальная книга, в которой рассказывается о достопримечательностях, общественном транспорте, ресторанах и кафе со вкусной едой.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/atlas-book.png" alt="atlas-book">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>У нас имеется специальная книга, в которой рассказывается о достопримечательностях, общественном транспорте, ресторанах и кафе со вкусной едой.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/hotel-cleaning.png" alt="hotel-cleaning"></div></td>
-										<td><div><span>Каждые день происходит уборка номера. Когда вы покидаете комнату, свободные уборщицы идут наводить порядок.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/hotel-cleaning.png" alt="hotel-cleaning">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>Каждые день происходит уборка номера. Когда вы покидаете комнату, свободные уборщицы идут наводить порядок.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/door-hang-sign.png" alt="door-hang-sign"></div></td>
-										<td><div><span>У нас есть набор дверных указателей, позволяющих нам понять, что вам требуется. Красный - не беспокоить. Желтый - требуется уборка. Зеленый - </span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/door-hang-sign.png" alt="door-hang-sign">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>У нас есть набор дверных указателей, позволяющих нам понять, что вам требуется. Красный - не беспокоить. Желтый - требуется уборка. Зеленый - </span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/hotel-building.png" alt="hotel-building"></div></td>
-										<td><div><span>Отель предоставляет транспортное средсство в случае, если вас необходимо избрать или отвезти в аэропорт.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/hotel-building.png" alt="hotel-building">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>Отель предоставляет транспортное средсство в случае, если вас необходимо избрать или отвезти в аэропорт.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/travel-luggage.png" alt="travel-luggage"></div></td>
-										<td><div><span>Если вы приехали раньше времени заселения, вы можете оставить свои вещи в отеле и пройти прогулять по городу или в столовую.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/travel-luggage.png" alt="travel-luggage">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>Если вы приехали раньше времени заселения, вы можете оставить свои вещи в отеле и пройти прогулять по городу или в столовую.</span>
+											</div>
+										</td>
 									</tr>
 								</table>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4" >
+							<div class="col-12 col-md-6 col-lg-4">
 								<table class="servicesTable">
 									<tr>
-										<td><img class="pngIcon" src="../img/png/car-parking.png" alt="car-parking"></td>
-										<td><div><span>У нас имеется 13 платных парковочных мест, рассположенных во внутреннем дворе, так что вы можете не переживать за безопасность автомобиля.</span></div>
+										<td>
+											<img class="pngIcon" src="../img/png/car-parking.png" alt="car-parking">
+										</td>
+										<td>
+											<div>
+												<span>У нас имеется 13 платных парковочных мест, рассположенных во внутреннем дворе, так что вы можете не переживать за безопасность автомобиля.</span>
+											</div>
 										</td>
 									</tr>
 									<tr>
-										<td><img class="pngIcon" src="../img/png/gift-box.png" alt="gift-box"></td>
-										<td><div><span>При бронировании номера вы можете заказать "Приветственный набор", который включает в себя сок, шапманское и сладости.</span></div></td>
+										<td>
+											<img class="pngIcon" src="../img/png/gift-box.png" alt="gift-box">
+										</td>
+										<td>
+											<div>
+												<span>При бронировании номера вы можете заказать "Приветственный набор", который включает в себя сок, шапманское и сладости.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><img class="pngIcon" src="../img/png/security-safe-box.png" alt="security-safe-box"></td>
-										<td><div><span>Если вы переживаете за свои драгоценности, когда покидаете отель, можете арендовать место в сейфе.</span></div></td>
+										<td>
+											<img class="pngIcon" src="../img/png/security-safe-box.png" alt="security-safe-box">
+										</td>
+										<td>
+											<div>
+												<span>Если вы переживаете за свои драгоценности, когда покидаете отель, можете арендовать место в сейфе.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><img class="pngIcon" src="../img/png/hanger-with-towel.png" alt="hanger-with-towel"></td>
-										<td><div><span>Вы можете заказать стирку своих грязных вещей. Для этого достаточно прикрепить бирку к изделию и положить его в общую корзину.</span></div></td>
+										<td>
+											<img class="pngIcon" src="../img/png/hanger-with-towel.png" alt="hanger-with-towel">
+										</td>
+										<td>
+											<div>
+												<span>Вы можете заказать стирку своих грязных вещей. Для этого достаточно прикрепить бирку к изделию и положить его в общую корзину.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><img class="pngIcon" src="../img/png/clock.png" alt="clock"></td>
-										<td><div><span>В ситуации, когда вам неудобно выселяться в 12:00, вы можете на стадии бронирования номера попросить отложить выселение не более, чем на 6 часов.</span></div></td>
+										<td>
+											<img class="pngIcon" src="../img/png/clock.png" alt="clock">
+										</td>
+										<td>
+											<div>
+												<span>В ситуации, когда вам неудобно выселяться в 12:00, вы можете на стадии бронирования номера попросить отложить выселение не более, чем на 6 часов.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><img class="pngIcon" src="../img/png/plastic-cards.png" alt="plastic-cards"></td>
-										<td><div><span>При бронировании номера вам необходимо внести предоплату в размере 40% от стоимости выбранного номера.</span></div></td>
+										<td>
+											<img class="pngIcon" src="../img/png/plastic-cards.png" alt="plastic-cards">
+										</td>
+										<td>
+											<div>
+												<span>При бронировании номера вам необходимо внести предоплату в размере 40% от стоимости выбранного номера.</span>
+											</div>
+										</td>
 									</tr>
 								</table>
 							</div>
 							<div class="col-12 col-lg-4 borderBrown mt-md-2 mt-lg-0">
 								<table class="servicesTable">
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/cctv.png" alt="cctv"></div></td>
-										<td><div><span>У нас круглосуточно ведется видеонаблюдение на всей территории отеля. Вы можете не беспокоиться за свою безопасность.</span></div>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/cctv.png" alt="cctv">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>У нас круглосуточно ведется видеонаблюдение на всей территории отеля. Вы можете не беспокоиться за свою безопасность.</span>
+											</div>
 										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/computer-screen-tool.png" alt="computer-screen-tool"></div></td>
-										<td><div><span>В каждом номере отеля находится новый плоский телевизор с большим количеством каналов. Все телевизоры обладают функцией Smart TV.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/computer-screen-tool.png" alt="computer-screen-tool">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>В каждом номере отеля находится новый плоский телевизор с большим количеством каналов. Все телевизоры обладают функцией Smart TV.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/electric-iron.png" alt="electric-iron"></div></td>
-										<td><div><span>В шкафу каждой комнаты находится гладильная доска с утюгом, чтобы вы в любой момент могли погладить ваши вещи.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/electric-iron.png" alt="electric-iron">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>В шкафу каждой комнаты находится гладильная доска с утюгом, чтобы вы в любой момент могли погладить ваши вещи.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/hotel-bell.png" alt="hotel-bell"></div></td>
-										<td><div><span>В стоимость каждого номера включен завтрак. Наша столовая каждый день будет радовать вас свежеприготовленной едой.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/hotel-bell.png" alt="hotel-bell">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>В стоимость каждого номера включен завтрак. Наша столовая каждый день будет радовать вас свежеприготовленной едой.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/laptop-computer.png" alt="laptop-computer"></div></td>
-										<td><div><span>Не беспокойтесь, если у вас нет необходимого разъема. На ресепшене вы можете попросить дать вам переходник для любого типа розеток.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/laptop-computer.png" alt="laptop-computer">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>Не беспокойтесь, если у вас нет необходимого разъема. На ресепшене вы можете попросить дать вам переходник для любого типа розеток.</span>
+											</div>
+										</td>
 									</tr>
 									<tr>
-										<td><div><img class="pngIcon" src="../img/png/speedometer.png" alt="speedometer"></div></td>
-										<td><div><span>На всей территории отеля действует Wi-Fi подлючение скоростью до 150 Мб/с. Вы всегда будете на связи.</span></div></td>
+										<td>
+											<div>
+												<img class="pngIcon" src="../img/png/speedometer.png" alt="speedometer">
+											</div>
+										</td>
+										<td>
+											<div>
+												<span>На всей территории отеля действует Wi-Fi подлючение скоростью до 150 Мб/с. Вы всегда будете на связи.</span>
+											</div>
+										</td>
 									</tr>
 								</table>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div th:insert="fragments/footer :: footer">
-					
-				</div>
+				<div th:insert="fragments/footer :: footer"></div>
 			</div>
 		</main>
 	</div>
-	
-	
+
+
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 	<script src="../js/script.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
