--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -13,26 +13,15 @@
 			<div class="mobileMenu d-block d-lg-none">
 				<div class="mobileButtonDiv" style="display: flex;">
 					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
-							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
-						<g>
-							<g>
-								<path
-								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
-							</g>
+							<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 						</g>
 						<g>
-							<g>
-								<path
-								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
-							</g>
+							<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 						</g>
 						<g>
-							<g>
-								<path
-								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
-							</g>
+							<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 						</g>
 						<g>
 							<path d="M 230.576 87.106 H 57.85 c -5.523 0 -10 -4.477 -10 -10 s 4.477 -10 10 -10 h 172.726 c 5.523 0 10 4.477 10 10 S 236.099 87.106 230.576 87.106 Z" />
@@ -92,7 +81,7 @@
 				<div class="container-bg">
 					<div class="slide-bg justify-content-center align-items-center">
 						<div class="text">
-							<h1>Добро пожаловать в Key and Door Hotel</h1>
+							<h1>Key and Door Hotel</h1>
 						</div>
 					</div>
 				</div>
@@ -107,13 +96,10 @@
 										<div class="border-wrapper"></div>
 										<div class="container text-about">
 											<p>
-												Отель расположен в самом центре города - район Нормальм. Нормальм - городской округ Стокгольма и центр водного общественного транпорта. Здесь находятся
-												главные торговые центры и универмаги. Отдальнность от музеев Стокгольма нивелируется потрясающим общественным транспортом.
+												Добро пожаловать в нашу гостиницу в прекрасном районе Нормальм в Стокгольме! Мы предлагаем комфортабельные номера и широкий спектр услуг, чтобы сделать ваше пребывание у нас максимально приятным.
 												<br>
 												<br>
-
-												Key and Door Hotel владеет 38 комнатами и готов принять путешественников со всего мира. Если вы путешествуете со своей семьей, школой, компанией, вы можете
-												забронировать более 7 комнат со скидкой 10%.
+												Наша гостиница знаменита своим уникальным дизайном и дружелюбным персоналом, который готов помочь вам в любых вопросах. Мы предлагаем номера различных категорий, чтобы удовлетворить любые потребности и бюджеты. В каждом номере есть все необходимое для комфортного проживания, включая бесплатный Wi-Fi, телевизор с плоским экраном, холодильник и многие другие удобства.
 											</p>
 										</div>
 									</div>
@@ -207,9 +193,6 @@
 
 		</main>
 	</div>
-
-
-
 
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 	<script src="js/script.js"></script>
