--- a/src/main/webapp/WEB-INF/views/dynamicRoom.html
+++ b/src/main/webapp/WEB-INF/views/dynamicRoom.html
@@ -93,6 +93,8 @@
 				</div>
 
 				<div class="main_frame">
+					<p class="text-center" th:text="${room.description}"></p>
+					<br>
 					<iframe width="100%" height="640" allowfullscreen th:src="${'https://momento360.com/e/uc/' + room.panoramaUrlId}"></iframe>
 				</div>
 				<div th:insert="fragments/footer :: footer"></div>
@@ -101,7 +103,6 @@
 		</main>
 	</div>
 
-	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 	<script src="../js/script.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 </body>
