--- a/src/main/webapp/WEB-INF/views/admin/rooms/all.html
+++ b/src/main/webapp/WEB-INF/views/admin/rooms/all.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head th:insert="fragments/head :: headFragment">
-	<title id="pageTitle">Комнаты</title>
+<title id="pageTitle">Комнаты</title>
 </head>
 <body>
 	<div class="wrapper">
@@ -11,15 +11,19 @@
 		<div class="mobileMenu d-block d-lg-none">
 			<div class="mobileButtonDiv" style="display: flex;">
 				<a id="mobile-button" style="margin: 0 20px;">
-					<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+					<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+						xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
-							<path d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+							<path
+							d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 						</g>
 						<g>
-							<path d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+							<path
+							d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 						</g>
 						<g>
-							<path d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+							<path
+							d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 						</g>
 						<g>
 							<path d="M 230.576 87.106 H 57.85 c -5.523 0 -10 -4.477 -10 -10 s 4.477 -10 10 -10 h 172.726 c 5.523 0 10 4.477 10 10 S 236.099 87.106 230.576 87.106 Z" />
@@ -79,7 +83,7 @@
 		<div id="main_content">
 			<div class="container-fluid">
 				<div class="row justify-content-between m-1">
-					<a href="/admin/rooms/new" class="btn btn-primary">Создать</a>
+					<a href="/admin/rooms/new" class="btn btn-primary">Создать запись</a>
 					<h2>Комнаты</h2>
 					<span></span>
 				</div>
@@ -92,6 +96,7 @@
 								<th scope="col">Изображение</th>
 								<th scope="col">Макс. людей</th>
 								<th scope="col">Цена</th>
+								<th scope="col">Описание</th>
 								<th scope="col">#</th>
 							</tr>
 						</thead>
@@ -107,18 +112,16 @@
 									<span th:text="${r.title}"> Title </span>
 								</td>
 								<td>
-									<div th:if="${r.images == null or r.images.empty}">
-										<span>Нет доступных изображений</span>
-									</div>
-									<div class="swiper-slide" th:unless="${r.images.empty}">
-										<img th:src="@{'data:image/jpeg;base64,' + ${r.images.get(0).image}}" class="w-100" alt="room" />
-									</div>
+									<img th:src="${'/img/rooms/' + r.source + '/1.png'}" class="d-block w-100" alt="roomImage">
 								</td>
 								<td>
 									<span th:text="${r.maxPeople}"> MaxPeople </span>
 								</td>
 								<td>
 									<span th:text="${r.price}"> Price </span>
+								</td>
+								<td>
+									<span th:text="${r.description}"> Description </span>
 								</td>
 								<td>
 									<div>
