--- a/src/main/webapp/WEB-INF/views/admin/rooms/one.html
+++ b/src/main/webapp/WEB-INF/views/admin/rooms/one.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
-
-<head th:include="fragments/head :: headFragment">
+<head th:insert="fragments/head :: headFragment">
 <title id="pageTitle">Edit room</title>
+</head>
+<head>
+<script src="/js/slider.js"></script>
+<script src="/js/deleteImage.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -12,15 +15,19 @@
 		<div class="mobileMenu d-block d-lg-none">
 			<div class="mobileButtonDiv" style="display: flex;">
 				<a id="mobile-button" style="margin: 0 20px;">
-					<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+					<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
+						xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 						<g>
-							<pathd="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
+							<path
+							d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
 						</g>
 						<g>
-							<pathd="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+							<path
+							d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 						</g>
 						<g>
-							<pathd="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
+							<path
+							d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
 						</g>
 						<g>
 							<path d="M 230.576 87.106 H 57.85 c -5.523 0 -10 -4.477 -10 -10 s 4.477 -10 10 -10 h 172.726 c 5.523 0 10 4.477 10 10 S 236.099 87.106 230.576 87.106 Z" />
@@ -29,7 +36,7 @@
 							<path d="M 297.099 87.106 h -19.84 c -5.523 0 -10 -4.477 -10 -10 s 4.477 -10 10 -10 h 19.84 c 5.523 0 10 4.477 10 10 S 302.622 87.106 297.099 87.106 Z" />
 						</g>
 					</svg>
-				</a>	
+				</a>
 				<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
 					<a href="index.html">
 						<img src="/img/knd.png" alt="logo">
@@ -77,111 +84,143 @@
 			</div>
 		</div>
 
-		<div>
+		<div id="main_content">
 			<h2 class="text-center my-4">Изменение комнаты</h2>
-			<div class="d-flex justify-content-center m-3">
-				<div th:if="${error != null}">
-					<div class="p-3 mb-2 bg-warning text-dark">
-						<span th:text="${error}"></span>
-						<br>
-					</div>
+
+			<div th:if="${error != null}">
+				<div class="p-3 mb-2 bg-warning text-dark">
+					<span th:text="${error}"></span>
+					<br>
 				</div>
-				<form class="w-50" action="#" th:action="@{/admin/rooms/{id}(id=${room.id})}" th:object="${room}" method="post">
-					<div class="row my-1">
-						<div class="col">
-							<label class="col-form-label">id:</label>
-						</div>
-						<div class="col">
-							<input class="form-control" type="text" id="id" th:field="*{id}" disabled="disabled" required />
-						</div>
-					</div>
-					<div class="row my-1">
-						<div class="col">
-							<label class="col-form-label">Title:</label>
-						</div>
-						<div class="col">
-							<input class="form-control" type="text" th:field="*{title}" required />
-						</div>
-					</div>
-					<div class="row my-1">
-						<div class="col">
-							<label class="col-form-label">Max people:</label>
-						</div>
-						<div class="col">
-							<input class="form-control" type="text" th:field="*{maxPeople}" required />
-						</div>
-					</div>
-					<div class="row my-1">
-						<div class="col">
-							<label class="col-form-label">Price:</label>
-						</div>
-						<div class="col">
-							<input class="form-control" type="text" th:field="*{price}" required />
-						</div>
-					</div>
-					<div class="row my-1 justify-content-between">
-						<div>
-							<label class="col-form-label">Images:</label>
-						</div>
-						<div>
-							<input class="form-control" type="file" id="inputImages" enctype="multipart/form-data" multiple />
-						</div>
-						<div>
-							<button id="uploadImages">Upload</button>
-						</div>
-					</div>
-					<div class="row my-1 justify-content-center">
-						<div class="col">
-							<div class="slider SliderFour">
-								<div class="slider__wrapper">
-									<div th:each="img : *{images}">
-										<img th:src="@{'data:image/jpeg;base64,'+${img.image}}" class="w-50" alt="room" />
+			</div>
+			<form action="#" th:action="@{/admin/rooms/{id}(id=${room.id})}" th:object="${room}" method="post">
+
+				<div class="container-fluid">
+					<div class="row mx-0">
+						<div class="col-lg-6 col-12">
+							<div class="container-fluid">
+								<div class="row my-1">
+									<div class="col-3 col-md-5">
+										<label class="col-form-label">id:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" id="id" th:field="*{id}" disabled="disabled" required />
 									</div>
 								</div>
-								<a class="slider__control slider__control_left" href="#" role="button"></a>
-								<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+								<div class="row my-1">
+									<div class="col-4 col-md-5">
+										<label class="col-form-label">Title:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" th:field="*{title}" required />
+									</div>
+								</div>
+								<div class="row my-1">
+									<div class="col-4 col-md-5">
+										<label class="col-form-label">Source:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" th:field="*{source}" required />
+									</div>
+								</div>
+								<div class="row my-1">
+									<div class="col-5">
+										<label class="col-form-label">Max people:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" th:field="*{maxPeople}" required />
+									</div>
+								</div>
+								<div class="row my-1">
+									<div class="col-5">
+										<label class="col-form-label">Price:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" th:field="*{price}" required />
+									</div>
+								</div>
+								<div class="row my-1">
+									<div class="col-5">
+										<label class="col-form-label">Image count:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" th:field="*{imageCount}" disabled />
+									</div>
+								</div>
+								<div class="row my-1">
+									<div class="col-5">
+										<label class="col-form-label">Panorama URL ID:</label>
+									</div>
+									<div class="col">
+										<input class="form-control" type="text" th:field="*{panoramaUrlId}" required />
+									</div>
+								</div>
+								<div class="row my-1">
+									<div class="col-5">
+										<label class="col-form-label">Description:</label>
+									</div>
+									<div class="col">
+										<textarea class="form-control" rows="5" th:text="*{description}" required>
+										</textarea>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-6 col-12 px-5 px-lg-0">
+							<div class="container-fluid">
+								<div class="row my-2">
+									<label for="images" class="drop-container w-100">
+										<span class="drop-title">Drop files here</span>
+										or
+										<input type="file" id="inputImages" enctype="multipart/form-data" multiple>
+										<button id="uploadImages" type="button">Upload</button>
+									</label>
+								</div>
+								<th:block th:if="*{imageCount} > 0">
+									<div class="row my-1 justify-content-center">
+										<div class="col-12 overflow-hidden p-0">
+
+											<div class="slider-admin">
+												<div class="slider__wrapper">
+													<div class="slider__item" th:each="i : ${images}">
+														<button class="delete-btn trash-button" th:attr="onclick=|deleteButtons('${i}')|" type="button">
+															<span class='fa fa-trash'></span>
+														</button>
+														<!-- <img th:src="@{'data:image/png;base64, ' + ${i}}" class="d-block w-100" alt="roomImage"> -->
+														<img th:src="${'/img/rooms/' + room.source + '/' + i}" class="d-block w-100" alt="roomImage">
+													</div>
+												</div>
+												<th:block th:if="*{imageCount} > 1">
+													<a class="slider__control slider__control_left" href="#" role="button"></a>
+													<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+												</th:block>
+											</div>
+
+											<script type="text/javascript">
+												multiItemSlider('.slider-admin');
+											</script>
+										</div>
+									</div>
+								</th:block>
+								<th:block th:if="*{imageCount} == 0">
+									<h4>Для номера не присвоено ни одной фотографии</h4>
+								</th:block>
+								<div class="form-group row">
+									<input class="btn m-1 btn-success col" type="submit" value="Save" />
+									<input class="btn m-1 btn-secondary col" type="reset" value="Reset" />
+								</div>
 							</div>
 						</div>
 					</div>
+				</div>
 
-					<div class="form-group row">
-						<input class="btn m-1 btn-success col" type="submit" value="Save" />
-						<input class="btn m-1 btn-secondary col" type="reset" value="Reset" />
-					</div>
-				</form>
-			</div>
+
+			</form>
 		</div>
 	</div>
 </body>
 
-<script src="/js/slider.js"></script>
-<script>
-document.querySelector('#uploadImages').addEventListener('click', event => {
-	handleImageUpload();
-	window.location.reload();
-});
-
-function handleImageUpload() {
-	const files = document.querySelector('#inputImages').files;
-
-	const id = document.getElementById("id").value;
-	const url = '/admin/rooms/' + id + '/images';
-
-	for (let i = 0; i < files.length; i++) {
-		const formData = new FormData();
-		formData.append('file', files[i]);
-
-		$.ajax({
-		    url: url,
-		    type: "POST",
-		    data: formData,
-		    processData: false,
-		    contentType: false,
-		    error: function(jqXHR, textStatus, errorMessage) {
-		        console.log(errorMessage); // Optional
-		    }
-		});
-	}
-}
-</script>
+<script src="/js/sendImageToServer.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 </html>
